@@ -6,8 +6,10 @@ plugins {
     id 'application'
 }
 
-group 'org.louisj'
+group 'pers.louisj.Zwm.Launcher'
 version '0.0.1'
+
+applicationDefaultJvmArgs = ["-server", "-Xmx256M", "-XX:+UseZGC"]
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -31,13 +33,15 @@ dependencies {
     implementation group: 'net.java.dev.jna', name: 'jna', version: '5.8.0'
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.8.0'
 
+    // implementation group: 'com.vnetpublishing.java', name: 'super-user-application', version: '0.0.6'
+
     implementation group: 'org.louisj', name: 'Zwm.SysTray', version: '0.0.1'
-    implementation project(":")
+    implementation project(":Core")
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.louisj.Zwm.Launcher'
+    mainClass = 'pers.louisj.Zwm.Launcher.Launcher'
 }
 
 jar {
@@ -46,7 +50,7 @@ jar {
     // version = '0.0.1'
     manifest {
         // 指定jar的入口类
-        attributes "Manifest-Version": 1.0, 'Main-Class': 'org.louisj.Zwm.Launcher'
+        attributes "Manifest-Version": 1.0, 'Main-Class': 'pers.louisj.Zwm.Launcher.Launcher'
     }
 }
 
